Fix up a number of obvious minor problems and kinks found by Findbugs
git-svn-id: https://svn.apache.org/repos/asf/jakarta/turbine/core/branches/TURBINE_2_3_BRANCH@264141 13f79535-47bb-0310-9956-ffa450edef68